<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/home_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/home_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/content"
        android:layout_marginTop="7dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title_tv"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_ex_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_photo"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/content_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timecnt"
        android:layout_marginTop="6dp"
        android:textSize="13sp"
        android:textColor="@color/deep_green"
        app:layout_constraintTop_toBottomOf="@id/home_content_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/ver_line"
        android:layout_width="1dp"
        android:layout_height="8dp"
        android:layout_margin="5dp"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="@id/user_nickname_tv"
        app:layout_constraintBottom_toBottomOf="@id/user_nickname_tv"
        app:layout_constraintStart_toEndOf="@id/content_time_tv"/>

    <TextView
        android:id="@+id/user_nickname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:layout_marginTop="7dp"
        android:textSize="13sp"
        android:textColor="@color/gray"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/home_content_tv"
        app:layout_constraintStart_toEndOf="@id/ver_line"/>

    <View
        android:id="@+id/ver_line2"
        android:layout_width="1dp"
        android:layout_height="8dp"
        android:layout_margin="4dp"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="@id/user_nickname_tv"
        app:layout_constraintBottom_toBottomOf="@id/user_nickname_tv"
        app:layout_constraintStart_toEndOf="@id/user_nickname_tv"/>

    <TextView
        android:id="@+id/content_views_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toTopOf="@id/user_nickname_tv"
        app:layout_constraintBottom_toBottomOf="@id/user_nickname_tv"
        app:layout_constraintStart_toEndOf="@id/ver_line2"/>

    <View
        android:id="@+id/ver_line3"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        android:background="#D3D6D3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_time_tv"/>


</androidx.constraintlayout.widget.ConstraintLayout>