<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_iv"
                android:layout_width="35dp"
                android:layout_height="33dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/icon_back" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:focusable="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/delete_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/writing_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/content"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/img_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:text="@string/title"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_nickname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textColor="@color/deep_green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/content_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/timecnt"
                    android:textColor="@color/gray"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_content_tv" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/icon_view_24" />


                <TextView
                    android:id="@+id/view_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/views"
                    android:textColor="@color/gray"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_content_tv" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/writing_border"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_comment" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reply_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/reply_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/reply_border"
                android:hint="@string/reply"
                android:padding="9dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/reply_submit_bnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2D5335"
                android:text="@string/writedone"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/comment_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/reply_border"
                android:hint="@string/writereply"
                android:padding="9dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/comment_submit_bnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/deep_green"
                android:text="@string/writedone"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</layout>