<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="17dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cancel_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ocr_title_txt"
            style="@style/activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocr_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_button" />

        <TextView
            android:id="@+id/ocr_explain_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/ocrtext"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ocr_title_txt" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ocr_img_iv"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_corner_stroke"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ocr_explain_txt" />

        <TextView
            android:id="@+id/get_location_tv"
            style="@style/hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_corner_stroke"
            android:hint="@string/userAddress"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ocr_img_iv"
            tools:ignore="RtlSymmetry" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/get_photo_album_iv"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_location_tv" />


        <TextView
            android:id="@+id/done_iv"
            style="@style/done_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_corner_filled"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>