<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/write_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writenotice"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/location_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/icon_cur_location"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/write_title_tv" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentlocation"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/location_iv"
            app:layout_constraintTop_toBottomOf="@id/write_title_tv"/>

        <TextView
            android:id="@+id/current_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userAddress"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/write_title_tv"/>

        <EditText
            android:id="@+id/writing_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="23dp"
            android:hint="@string/writetitle"
            android:background="@color/transparent"
            android:textStyle="bold"
            android:textColorHint="@color/gray"
            app:layout_constraintStart_toStartOf="@id/location_iv"
            app:layout_constraintTop_toBottomOf="@id/location_iv"/>

        <View
            android:id="@+id/ver_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="10dp"
            android:background="#D3D6D3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writing_title_et"/>

        <EditText
            android:id="@+id/writing_content_et"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:hint="@string/writecontent"
            android:padding="10dp"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/ver_line"
            android:background="@drawable/signup_border"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/write_gallery_rv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_photo"
            app:layout_constraintTop_toBottomOf="@id/writing_content_et"
            app:layout_constraintBottom_toTopOf="@id/write_done_iv" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_photo_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icon_add_photo"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/write_done_iv"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/write_done_iv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>